--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>JavaScript Code Challenge - Final</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <script type="text/javascript" src='./lib/jquery-3.2.1.js'></script>
   </head>
   <body>
@@ -18,10 +19,10 @@
         <div class="col s4">
           <form id="photo-form">
             <label for="image_url">Image Url</label>
-            <input type='text' name='image_url' />
+            <input id="imgUrlEntered" type='text' name='image_url' />
             <label for="caption">Caption</label>
-            <input type='text' name='caption' />
-            <input type='submit' />
+            <input id="textEntered" type='text' name='caption' />
+            <input id="submitImage" type='submit' />
           </form>
         </div>
 
@@ -32,5 +33,7 @@
 
     </div>
     <script type="text/javascript" src='src/index.js'></script>
+    <!-- <script type="text/javascript" src='src/image.js'></script> -->
+    <!-- <script type="text/javascript" src='src/text.js'></script> -->
   </body>
 </html>
